AC_PREREQ([2.64])
AC_INIT([MemTracker],[0.1],[antonin.portelli@me.com])
AC_CONFIG_AUX_DIR([.buildutils])
AC_CONFIG_SRCDIR([memtracker.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([.buildutils/m4])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_SILENT_RULES([yes])

AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
m4_ifdef([AC_PROG_RANLIB],[AC_PROG_RANLIB])
m4_ifdef([AM_PROG_AR],[AM_PROG_AR])
AC_OPENMP
ACXX_OPENMP
AM_CFLAGS="$AM_CFLAGS $OPENMP_CFLAGS"
AM_CXXFLAGS="$AM_CXXFLAGS $OPENMP_CXXFLAGS"

LT_INIT

AC_CHECK_HEADERS([stdlib.h])

AC_TYPE_SIZE_T

AC_FUNC_MALLOC
AC_FUNC_REALLOC

AC_SUBST([AM_CFLAGS])
AC_SUBST([AM_CXXFLAGS])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
